2007-11-03  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-core.el (rails-core:model-file
	rails-core:controller-file-by-model): search namespaced models and
	controllers.

	* rails-test.el (rails-test:line-regexp): applled patch by Alan Shields, 
	don't hightlight whitespaces in test output.

	* rails-test.el: appled patch by Alan Shields,
	can't run rails-test-current-* without a file.

2007-11-02  Dmitry Galinsky  <dima.exe@gmail.com>
	
	* rails.el (rails-templates-list): added 'html.erb'.

	* rails-snippets-feature.el (rails-snippets-feature:rest): replace *_url to *_path

	* inflections.el (singularize-string pluralize-string): downcase
	string befored searched.

2007-10-12  Dmitry Galinsky  <dima.exe@gmail.com>

	* inflections.el (pluralize-string singularize-string): downcase
	input string before find in irregular

2007-09-11  Peter Rezikov  <crazypit13@gmail.com>

	* rails.el: basic support of Markaby templates.
                                         
2007-08-18  Peter Rezikov  <crazypit13@gmail.com>
        * rails-spec.el: base support for rspec. Function
        `rails-spec:run-all', `rails-spec:run-this-file', `rails-spec:run-last',
        `rails-spec:run-files'.  Variables: `rails-spec:all-files',
        `rails-spec:last-files', `rails-spec:runner',
        `rails-spec:runner-options'.
        * rails-find.el, rails-ui.el: finds for rspec
        * rails-project.el: new functions: rails-project:in-root-with-cd, 
        rails-project:compile-in-root
        * rails-lib.el: new macro in-directory
                                         
2007-08-18  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-scripts.el (rails-script:run-interactive): setup a
	variable `ruby-buffer' for corect working with `inf-ruby'

2007-08-17  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ruby.el (hs-minor-mode-hook): created, placed in
	hs-setup-overlay initialization to fix a bug #13162

2007-08-15  Dmitry Galinsky  <dima.exe@gmail.com>
