@@ -1,3 +1,7 @@
+2007-11-04  Dmitry Galinsky  <dima.exe@gmail.com>
+
+	* rails-core.el (rails-core:model-exist-p): fixed error, when model-file not exists.
+
 2007-11-03  Dmitry Galinsky  <dima.exe@gmail.com>
 
 	* rails-core.el (rails-core:model-file
